Adding City as a Platform solution

--- a/marketplace/fiware-ready/agricolus/agricolus-ecosystem.html
+++ b/marketplace/fiware-ready/agricolus/agricolus-ecosystem.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="AgriFood,Sensory Systems">
 <meta name="description" content="AGRICOLUS is a cloud applications ecosystem for precision farming with multiple purposes: disease awareness and forecasts, crop monitoring, decision support system for treatments and fertilizers, farm management, and end-to-end traceability bringing valuable information to final users.">
 
-<meta http-equiv="refresh" content="1; url=https://www.agricolus.com/en/solutions/" />
-<meta property="og:url" content="https://www.fiware.org/fiware-ready/agricolus/agricolus-ecosystem.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=ready&id=agricolus-agricolusecosystem" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=ready&id=agricolus-agricolusecosystem">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
