--- a/marketplace/powered-by-fiware/bosonit/elliot-cloud.html
+++ b/marketplace/powered-by-fiware/bosonit/elliot-cloud.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="AgriFood,Cities,Industry,Internet of Things,Data Analytics">
 <meta name="description" content="Elliot Cloud is an Internet of Everything platform designed to monitor, analyze and manage heterogeneous sources of data (agrofood, smart cities, industry, etc.)">
 
-<meta http-equiv="refresh" content="1; url=https://bosonit.com/en/elliot-cloud-diseno-application-platform-iot-branding/" />
-<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/bosonit/elliot-cloud.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=bosonit-elliotcloud" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=bosonit-elliotcloud">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
