--- a/marketplace/powered-by-fiware/global-smart/smarttown.html
+++ b/marketplace/powered-by-fiware/global-smart/smarttown.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Air Quality,Cities,Energy,Lighting,Parks &amp;amp; Gardens,Big Data,Data Analytics,Data Handling,Internet of Things,Internet Services">
 <meta name="description" content="SmartTown is a horizontal platform, which includes different verticals that can occur in a population, for its remote management in a centralized way and offers interoperability between the different devices and integrations">
 
-<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=globalsmart-smarttown" />
-<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=globalsmart-smarttown">
+<meta http-equiv="refresh" content="1; url=https://www.globalsmartiot.es/" />
+<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/global-smart/smarttown.html">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
