--- a/showcase/fiware-ready/sitemap.html
+++ b/showcase/fiware-ready/sitemap.html
@@ -62,6 +62,7 @@ li {
 </head>
 <body>
 	<ul>
+		<li><a href="https://www.fiware.org/fiware-ready/agricolus/agricolus-ecosystem.html">Agricolus - Agricolus Ecosystem</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/distromel/sigeus.html">Distromel - siGEUS</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/egm/edgespot.html">EGM - EdgeSpot</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/engineering/dashram.html">Engineering - Dashram</a></li>
@@ -70,6 +71,10 @@ li {
 		<li><a href="https://www.fiware.org/fiware-ready/hopu/smart-spot.html">HOPU - Smart Spot</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/libelium/meshlium.html">Libelium - Meshlium</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/libelium/plug-sense-.html">Libelium - Plug&amp;Sense!</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/odin-solutions/ipex-04-datalogger.html">Odin Solutions - IPex 04 Datalogger</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/odin-solutions/ipex-12-datalogger.html">Odin Solutions - IPex 12 Datalogger</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/odin-solutions/ipex-16-datalogger.html">Odin Solutions - IPex 16 Datalogger</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/odin-solutions/mex-06-datalogger.html">Odin Solutions - Mex 06 Datalogger</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/secmotic/lockart.html">Secmotic - LockArt</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/secmotic/muvone.html">Secmotic - Muvone</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/sensowave/digitanimal.html">Sensowave - Digitanimal</a></li>
