--- a/showcase/powered-by-fiware/sitemap.html
+++ b/showcase/powered-by-fiware/sitemap.html
@@ -63,9 +63,11 @@ li {
 <body>
 	<ul>
 		<li><a href="https://www.fiware.org/powered-by-fiware/-ui---urban-software/-ui---urbanpulse.html">[ui!] Urban Software - [ui!] UrbanPulse</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/agricolus/agricolus.html">Agricolus - Agricolus</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/atos/masai.html">Atos - MASAI</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/atos/atos-cognitive-data-platform.html">Atos - Atos Cognitive Data Platform</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/bettair-cities/bettair.html">Bettair Cities - Bettair</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/bosonit/elliot-cloud.html">Bosonit - Elliot Cloud</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/dksr/open-urban-data-platform.html">DKSR - Open Urban Data Platform</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/egm/carpool-parking.html">EGM - Carpool Parking</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/egm/connected-canteens.html">EGM - Connected Canteens</a></li>
@@ -105,7 +107,6 @@ li {
 		<li><a href="https://www.fiware.org/powered-by-fiware/engineering-ingegneria-informatica/extended-digital-twin-of-smart-buildings.html">Engineering Ingegneria Informatica - eXtended Digital Twin of Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/agricolus-srl/agrigateways.html">Agricolus srl - Agrigateways</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/addix-gmbh/adi-fi.html">ADDIX GmbH - ADI-FI</a></li>
-		<li><a href="https://www.fiware.org/powered-by-fiware/global-smart/smarttown.html">Global Smart - SmartTown</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/dih-faubourg-numerique/somware-space.html">DIH Faubourg Numérique - somware.space</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/kmd-group/data-context-platform.html">KMD Group - Data Context Platform</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/skg-tecnologia/smart-helios.html">SKG Tecnologia - Smart Helios</a></li>
