--- a/marketplace/fiware-ready/odin-solutions/ipex-04-datalogger.html
+++ b/marketplace/fiware-ready/odin-solutions/ipex-04-datalogger.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Cities,AgriFood,Industry,Internet of Things">
 <meta name="description" content="IPex 04 Datalogger is a Monitoring and Tele-control solution for electrical panels with 4 inputs/outputs; Smart Cities; Industry, and Agriculture.">
 
-<meta http-equiv="refresh" content="1; url=http://www.odins.es/en/project/ipex04-datalogger/" />
-<meta property="og:url" content="https://www.fiware.org/fiware-ready/odin-solutions/ipex-04-datalogger.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=ready&id=odinsolutions-ipex04datalogger" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=ready&id=odinsolutions-ipex04datalogger">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
