--- a/marketplace/fiware-ready/odin-solutions/mex-06-datalogger.html
+++ b/marketplace/fiware-ready/odin-solutions/mex-06-datalogger.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Cities,AgriFood,Industry,Internet of Things">
 <meta name="description" content="Met 06 Datalogger is a Monitoring and Tele-control solution for outdoor environments for monitoring and remote control; Smart Cities and Smart Industry.">
 
-<meta http-equiv="refresh" content="1; url=http://www.odins.es/en/project/mex06-datalogger/" />
-<meta property="og:url" content="https://www.fiware.org/fiware-ready/odin-solutions/mex-06-datalogger.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=ready&id=odinsolutions-mex06datalogger" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=ready&id=odinsolutions-mex06datalogger">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
