--- a/marketplace/powered-by-fiware/agricolus/agricolus.html
+++ b/marketplace/powered-by-fiware/agricolus/agricolus.html
@@ -11,8 +11,8 @@
 <meta name="keywords" content="Agriculture,AgriFood,Green Deal,Sustainability,Artificial Intelligence,Big Data,Data Analytics,Internet of Things,Software as a Service">
 <meta name="description" content="Agricolus is a cloud platform created to simplify and enhance the work in the field of farmers and professionals. It is composed of the main applications of precision agriculture:  from satellite imagery with vegetation indices to forecast models for irrigation, fertilization, pest and diseases.">
 
-<meta http-equiv="refresh" content="1; url=https://www.agricolus.com/en/solutions/" />
-<meta property="og:url" content="https://www.fiware.org/powered-by-fiware/agricolus/agricolus.html">
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/showcase/product-details/?category=powered&id=agricolus-agricolus" />
+<meta property="og:url" content="https://www.fiware.org/marketplace/product-details/?category=powered&id=agricolus-agricolus">
 
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
