--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -81,6 +81,7 @@
                 <option value='smart-cities'>Smart Cities</option>
                 <option value='smart-energy'>Smart Energy</option>
                 <option value='smart-industry'>Smart Industry</option>
+                <option value='smart-mobility'>Smart Mobility</option>
                 <option value='smart-water'>Smart Water</option>
                 <option value='technology'>Technology</option>
                 <option value='university'>University</option>
