--- a/directories/ihubs/filters.html
+++ b/directories/ihubs/filters.html
@@ -39,14 +39,19 @@
                     <option value='environment'>Environment</option>
                     <option value='heritage'>Heritage</option>
                     <option value='industry'>Industry</option>
+                    <option value='industry-4-0'>Industry 4.0</option>
                     <option value='logistics'>Logistics</option>
                     <option value='manufacturing'>Manufacturing</option>
                     <option value='mobility'>Mobility</option>
                     <option value='multidomain'>Multidomain</option>
                     <option value='ports'>Ports</option>
+                    <option value='precision-agriculture-and-livestock'>Precision Agriculture and Livestock</option>
+                    <option value='renewable-energies-and-resources'>Renewable Energies and Resources</option>
                     <option value='robotics'>Robotics</option>
                     <option value='safety-and-security'>Safety and Security</option>
                     <option value='sea'>Sea</option>
+                    <option value='smart-cities'>Smart Cities</option>
+                    <option value='smart-destinations'>Smart Destinations</option>
                     <option value='space'>Space</option>
                     <option value='sustainability'>Sustainability</option>
                     <option value='territory'>Territory</option>
@@ -61,6 +66,7 @@
         <select name='' id='filterCountry'>
             <option value='*'>All Locations</option>
                     <option value='argentina'>Argentina</option>
+                    <option value='austria'>Austria</option>
                     <option value='brazil'>Brazil</option>
                     <option value='canada'>Canada</option>
                     <option value='colombia'>Colombia</option>
