--- a/directories/research-development/filters.html
+++ b/directories/research-development/filters.html
@@ -52,6 +52,7 @@
         <label for='filterDomain' class='dropdown-label'>Domain</label>
         <select name='' id='filterDomain'>
             <option value='*'>All Domains</option>
+                    <option value='agriculture'>Agriculture</option>
                     <option value='agrifood'>AgriFood</option>
                     <option value='cities'>Cities</option>
                     <option value='data-spaces'>Data Spaces</option>
@@ -59,12 +60,15 @@
                     <option value='energy'>Energy</option>
                     <option value='green-deal'>Green Deal</option>
                     <option value='industry'>Industry</option>
+                    <option value='logistics'>Logistics</option>
                     <option value='manufacturing'>Manufacturing</option>
                     <option value='mobility'>Mobility</option>
                     <option value='robotics'>Robotics</option>
                     <option value='security'>Security</option>
+                    <option value='smart-buildings'>Smart Buildings</option>
                     <option value='smart-cities'>Smart Cities</option>
                     <option value='smart-mobility'>Smart Mobility</option>
+                    <option value='tourism'>Tourism</option>
                     <option value='water'>Water</option>
         </select>
     </div>
