--- a/directories/research-development/project/sitemap.html
+++ b/directories/research-development/project/sitemap.html
@@ -74,9 +74,11 @@ li {
 		<li><a href="https://www.fiware.org/project/circuloos.html">CIRCULOOS</a></li>
 		<li><a href="https://www.fiware.org/project/citcom-ai.html">Citcom.ai</a></li>
 		<li><a href="https://www.fiware.org/project/cognets.html">COGNETs</a></li>
+		<li><a href="https://www.fiware.org/project/cop-pilot.html">COP-PILOT</a></li>
 		<li><a href="https://www.fiware.org/project/cyclops.html">Cyclops</a></li>
 		<li><a href="https://www.fiware.org/project/deployai.html">DeployAI</a></li>
 		<li><a href="https://www.fiware.org/project/deployemds.html">deployEMDS</a></li>
+		<li><a href="https://www.fiware.org/project/deploytour.html">DEPLOYTOUR</a></li>
 		<li><a href="https://www.fiware.org/project/didoz-etteln.html">DiDoz Etteln</a></li>
 		<li><a href="https://www.fiware.org/project/didymos-xr.html">Didymos-XR</a></li>
 		<li><a href="https://www.fiware.org/project/dih-.html">DIH²</a></li>
