matteo piselli and cristiana mapelli upload

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -45,13 +45,20 @@
 
 <div class='dropdown-container'>
 
+        <div class='filter-element'>
+            <label for='filterCompany' class='dropdown-label'>Organisation</label>
+            <select name='' id='filterCompany' class='dropdown-last'>
+                <option value='*'>All Organisations</option>
+                        <option value='wisetown'>WiseTown</option>
+            </select>
+        </div>
 
         <div class='filter-element'>
             <label for='filterRole' class='dropdown-label'>Role</label>
             <select name='' id='filterRole' class='dropdown-last'>
                 <option value='*'>All Roles</option>
-                        <option value='architect'>Architect</option>
-                        <option value='evangelist'>Evangelist</option>
+                        <option value='journalist'>Journalist</option>
+                        <option value='manager'>Manager</option>
             </select>
         </div>
 
