--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -77,6 +77,7 @@
                 <option value='digital-product-passport'>Digital Product Passport</option>
                 <option value='engineering'>Engineering</option>
                 <option value='global-summit'>Global Summit</option>
+                <option value='member-event'>Member Event</option>
                 <option value='open-source'>Open Source</option>
                 <option value='smart-cities'>Smart Cities</option>
                 <option value='smart-energy'>Smart Energy</option>
