sdsf-2025 content updates

--- a/directories/events-directory/social-media/swiss-data-space-forum.html
+++ b/directories/events-directory/social-media/swiss-data-space-forum.html
@@ -53,6 +53,6 @@ body {
 </head>
 <body>
 	<h1>Swiss Data Space Forum</h1>
-   <p>The Swiss Data Space Forum aims to discuss the crucial role of data spaces in creating a trustworthy digital future. Organized by the Swiss Data Alliance’s data spaces working group in collaboration with digitalswitzerland, the forum is an important step toward developing a strong, secure, and collaborative digital infrastructure for the country.</p> <p>Central to this initiative is the Swiss Data Alliance, an independent think tank established in 2017. The Alliance is committed to promoting smart data policies and encouraging responsible data reuse.</p>
+   <p>The Swiss Data Alliance and digitalswitzerland will host the second edition of the Swiss Data Space Forum on 2 September 2025 at the HSLU Campus in Rotkreuz. The all-day event will bring together policy makers, data experts from the private sector, industry leaders and researchers to advance data sharing infrastructure and digital collaboration efforts in Switzerland.</p> <p>Under the motto ‘From vision to realisation’, there will be interesting keynotes from the public and private sectors as well as six domain-specific workshops that will enable an interactive exchange. The event aims to accelerate the introduction of trustworthy and interoperable data spaces in the public and private sectors and to strengthen the data space community.</p> <p>Registration is now open, with discounted rates for students and partner organisations.</p>
 </body>
 </html>
