--- a/directories/events-directory/events.html
+++ b/directories/events-directory/events.html
@@ -3023,7 +3023,7 @@
               <div class="speaker-info">
                 <div class="speaker-name">Racine Ly</div>
                 <div class="speaker-job-title">Director</div>
-                <div class="speaker-company">AKADEMIYA2063</div>
+                <div class="speaker-company">Geonatix</div>
               </div>
             </div>
             <div class="speaker" data-modal='rachael-orumor'>
