BOD update without ATOS

--- a/directories/people/bod/filters.html
+++ b/directories/people/bod/filters.html
@@ -50,9 +50,8 @@
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
-                        <option value='atos'>Atos</option>
                         <option value='ficodes'>Ficodes</option>
-                        <option value='hopu---libelium'>Hopu – Libelium</option>
+                        <option value='libelium'>Libelium</option>
                         <option value='madinah-region-development-authority'>Madinah Region Development Authority</option>
                         <option value='meditech'>MedITech</option>
                         <option value='nec'>NEC</option>
@@ -73,7 +72,6 @@
                         <option value='fellow'>Fellow</option>
                         <option value='general-manager'>General Manager</option>
                         <option value='managing-director'>Managing Director</option>
-                        <option value='vp'>VP</option>
             </select>
         </div>
 
@@ -91,7 +89,6 @@
             <label for='filterCountry' class='dropdown-label'>Countries</label>
             <select name='' id='filterCountry' class='dropdown-last'>
                 <option value='*'>All Locations</option>
-                    <option value='france'>France</option>
                     <option value='germany'>Germany</option>
                     <option value='italy'>Italy</option>
                     <option value='japan'>Japan</option>
