Edited new Impact Story description

--- a/directories/impact-stories/latest.html
+++ b/directories/impact-stories/latest.html
@@ -26,7 +26,7 @@
                 <h1 id="is-title">Citizen-based monitoring of inclusive health and well-being
 </h1>
             </a>
-            <p id="is-excerpt">IN-HABIT is an H2020 project investigating how to promote inclusive health and well-being in Cordoba, Lucca, Riga, and Nitra. It utilizes citizen science and measures from various digital sources, including sensors, cameras, open data, and apps, to monitor the effects of actions implemented to enhance the health and well-being of citizens, based on citizen involvement.</p>
+            <p id="is-excerpt">IN-HABIT is an H2020 project investigating how to promote inclusive health and well-being in Cordoba, Lucca, Riga, and Nitra. The IN-HABIT platform utilizes citizen science and measures from various digital sources, including sensors, cameras, open data, and apps, to monitor the effects of actions implemented to enhance the health and well-being of citizens, based on citizen involvement.</p>
         </div>
     </div>
     <div class="et_pb_module et_pb_code et_pb_code_1">
