--- a/directories/people/evangelists/filters.html
+++ b/directories/people/evangelists/filters.html
@@ -59,12 +59,11 @@
                         <option value='berlin-thinking-consulting'>Berlin Thinking Consulting</option>
                         <option value='blusky-consulting'>BluSky Consulting</option>
                         <option value='city-of-herne'>City of Herne</option>
-                        <option value='city-of-vienna'>City of Vienna</option>
                         <option value='cubilock'>Cubilock</option>
-                        <option value='digitaltwin-technology'>DigitalTwin Technology</option>
                         <option value='ecoembes'>ECOEMBES</option>
                         <option value='engineering'>Engineering</option>
-                        <option value='eppo'>EPPO</option>
+                        <option value='european-medicines-agency-'>European Medicines Agency
+</option>
                         <option value='faubourg-numérique'>Faubourg Numérique</option>
                         <option value='fiware'>FIWARE</option>
                         <option value='fiware-digital-transformation-lab-at-the-university-of-córdoba'>FIWARE Digital Transformation Lab at the University of Córdoba</option>
@@ -94,6 +93,7 @@
                         <option value='polytechnic-school-of-the-university-of-são-paulo'>Polytechnic School of the University of São Paulo</option>
                         <option value='poznan-supercomputing-and-networking-center'>Poznan Supercomputing and Networking Center</option>
                         <option value='red-hat'>Red Hat</option>
+                        <option value='seamware'>Seamware</option>
                         <option value='secmotic'>Secmotic</option>
                         <option value='teamdev'>TeamDev</option>
                         <option value='teamdev-srl'>TeamDev SRL</option>
@@ -102,7 +102,6 @@
                         <option value='thoughtlab-group'>ThoughtLab Group</option>
                         <option value='universidad-politécnica-de-madrid'>Universidad Politécnica de Madrid</option>
                         <option value='vienna-business-agency'>Vienna Business Agency</option>
-                        <option value='wobcom'>WOBCOM</option>
             </select>
         </div>
 
@@ -110,19 +109,18 @@
             <label for='filterRole' class='dropdown-label'>Role</label>
             <select name='' id='filterRole' class='dropdown-last'>
                 <option value='*'>All Roles</option>
+                        <option value='admin'>Admin</option>
                         <option value='assistant-professor'>Assistant Professor</option>
                         <option value='associate-general-manager'>Associate General Manager</option>
                         <option value='business-development-manager'>Business Development Manager</option>
                         <option value='cdo'>CDO</option>
-                        <option value='cdto'>CDTO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chief-architect'>Chief Architect</option>
                         <option value='cloud-expert'>Cloud Expert</option>
                         <option value='co-founder'>Co-Founder</option>
+                        <option value='co-founder'>Co-founder</option>
                         <option value='community-architect'>Community Architect</option>
                         <option value='consultant'>Consultant</option>
-                        <option value='coo'>COO</option>
-                        <option value='coordinator'>Coordinator</option>
                         <option value='cso'>CSO</option>
                         <option value='cto'>CTO</option>
                         <option value='deputy-director'>Deputy Director</option>
@@ -139,10 +137,11 @@
                         <option value='president'>President</option>
                         <option value='product-manager'>Product Manager</option>
                         <option value='professor'>Professor</option>
+                        <option value='program-manager'>Program Manager</option>
                         <option value='project-manager'>Project Manager</option>
                         <option value='researcher'>Researcher</option>
+                        <option value='retired'>Retired</option>
                         <option value='software-architect'>Software Architect</option>
-                        <option value='solution-architect'>Solution Architect</option>
                         <option value='technical-expert'>Technical Expert</option>
             </select>
         </div>
