--- a/directories/people/evangelists/filters.html
+++ b/directories/people/evangelists/filters.html
@@ -62,8 +62,7 @@
                         <option value='cubilock'>Cubilock</option>
                         <option value='ecoembes'>ECOEMBES</option>
                         <option value='engineering'>Engineering</option>
-                        <option value='european-medicines-agency-'>European Medicines Agency
-</option>
+                        <option value='european-medicines-agency'>European Medicines Agency</option>
                         <option value='faubourg-numérique'>Faubourg Numérique</option>
                         <option value='fiware'>FIWARE</option>
                         <option value='fiware-digital-transformation-lab-at-the-university-of-córdoba'>FIWARE Digital Transformation Lab at the University of Córdoba</option>
