--- a/directories/people/evangelists/people.html
+++ b/directories/people/evangelists/people.html
@@ -639,7 +639,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-25" class="grid-item european-medicines-agency-   program-manager ">
+        <div id="item-25" class="grid-item european-medicines-agency   program-manager ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -651,8 +651,7 @@
                     <h6 class='name'>Gianluca Dianese</h6>
                     <h4 class='position'>Senior Program Management Specialist</h4>
                     <a target='_blank' href='https://www.ema.europa.eu/en/homepage' rel='noopener'>
-                        <h5 class='company-link'>European Medicines Agency
-</h5>
+                        <h5 class='company-link'>European Medicines Agency</h5>
                     </a>
                 </div>
                 <div class='icons'>
