--- a/directories/people/evangelists/filters.html
+++ b/directories/people/evangelists/filters.html
@@ -79,6 +79,7 @@
                         <option value='iota-foundation'>IOTA Foundation</option>
                         <option value='ip-nets'>iP-NETs</option>
                         <option value='itam'>ITAM</option>
+                        <option value='iti'>ITI</option>
                         <option value='jig'>JIG</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='libelium'>Libelium</option>
