--- a/directories/people/evangelists/people.html
+++ b/directories/people/evangelists/people.html
@@ -629,7 +629,7 @@
                 <div class='profile-details'>
                 <div class='cat-bio' data-modal='24'>
                     <h6 class='name'>Bhushan</h6>
-                    <h4 class='position'></h4>
+                    <h4 class='position'>IT Admin</h4>
                     <a target='_blank' href='https://cubilock.com/' rel='noopener'>
                         <h5 class='company-link'>Cubilock</h5>
                     </a>
