adding new product

--- a/showcase/powered-by-fiware/sitemap.html
+++ b/showcase/powered-by-fiware/sitemap.html
@@ -111,6 +111,7 @@ li {
 		<li><a href="https://www.fiware.org/powered-by-fiware/kmd-group/data-context-platform.html">KMD Group - Data Context Platform</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/skg-tecnologia/smart-helios.html">SKG Tecnologia - Smart Helios</a></li>
 		<li><a href="https://www.fiware.org/powered-by-fiware/senlab/fiwarebox.html">SenLab - FIWAREBox</a></li>
+		<li><a href="https://www.fiware.org/powered-by-fiware/agualytics-s-l/agualink.html">Agualytics S.L - AguaLink</a></li>
 	</ul>
 </body>
 </html>
