--- a/directories/events-directory/events.html
+++ b/directories/events-directory/events.html
@@ -2564,6 +2564,9 @@
             <h3 class="city-name">Hamburg</h3>
             </div>
             <span class="place">Hamburg Messe</span>
+            <div class="date-time">
+              <span class="time">15 Jun – 18 Jun</span>
+            </div>
           </div>
         </a>
         </div>
