--- a/index.html
+++ b/index.html
@@ -105,13 +105,14 @@ ul {
           <h2>FIWARE Events</h3>
           <ul>
             <li><a href="./directories/events-directory/">Event Listings</a></li>
+            <li>Training Courses : <a href="./directories/trainings/map-staging.html">Map</a></li>
           </ul>
         </div>
         <div>
           <h2>FIWARE Technology</h2>
           <ul>
             <li><a href="./directories/enablers/">Generic Enablers</a></li>
-            <li><a href="./directories/webinars/">Webinars</a></li>
+            <li><a href="./directories/webinars/">Webinars</a></li>  
           </ul>
           <h2>FIWARE Community</h2>
           <ul>
