--- a/directories/enablers/enablers.html
+++ b/directories/enablers/enablers.html
@@ -718,42 +718,6 @@
             </a>
         </div>
     </div>
-    <div id="enabler-iot-agent-for-isoxml" class='grid-item iot-agents iot-devices http member'>
-        
-        <div class='gridElementTextContainer'>
-            <div class='label-type'>
-                <img src='https://www.fiware.org/custom/brand-guide/img/badges/catalogue/02/svg/iot-agents.svg'/>
-            </div>
-            <p class='cat-name'>IoT Agent for ISOXML</p>
-            <div class="details-container">
-                <div class='label-summary'>
-                    <span class='cat-excerpt'>A bridge between the ISOXML/ADAPT protocol for agricultural machinery and NGSI.</span>
-                </div>
-            </div>
-        </div>
-        <div class='card-attributes'>
-            <div class='chip-technology'>
-                <p class="label-card">Technology</p>
-                <ul class='chips'><li>HTTP</li></ul>
-                <span class='chips-gradient'></span>
-            </div>
-            <div class='chip-domain'>
-                <p class="label-card">Function</p>
-                <ul class='chips'><li>IoT Devices</li></ul>
-                <span class='chips-gradient'></span>
-            </div>
-        </div>
-        <div class='foot'>
-            <div class='cat-info' data-modal='26'>
-                <span class="material-symbols-outlined">info</span>
-                More Info
-            </div>
-            <a class='cat-details-primary' target="_blank" href="https://fiware-iotagent-isoxml.readthedocs.io/">
-                <span class='material-symbols-outlined'>description</span>
-                Docs
-            </a>
-        </div>
-    </div>
     <div id="enabler-iot-agent-library" class='grid-item iot-agents iot-devices node-js member'>
         <a id="media-streams-enablers" class="hidden"></a>
         <div class='gridElementTextContainer'>
@@ -780,7 +744,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='27'>
+            <div class='cat-info' data-modal='26'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -816,7 +780,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='28'>
+            <div class='cat-info' data-modal='27'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -852,7 +816,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='29'>
+            <div class='cat-info' data-modal='28'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -888,7 +852,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='30'>
+            <div class='cat-info' data-modal='29'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -924,7 +888,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='31'>
+            <div class='cat-info' data-modal='30'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -960,7 +924,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='32'>
+            <div class='cat-info' data-modal='31'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -996,7 +960,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='33'>
+            <div class='cat-info' data-modal='32'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1032,7 +996,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='34'>
+            <div class='cat-info' data-modal='33'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1042,7 +1006,7 @@
             </a>
         </div>
     </div>
-    <div id="enabler-domibus" class='grid-item third-party data-exchange edelivery member'>
+    <div id="enabler-domibus" class='grid-item third-party data-exchange edelivery '>
         
         <div class='gridElementTextContainer'>
             <div class='label-type'>
@@ -1068,10 +1032,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='35'>
-                <span class="material-symbols-outlined">info</span>
-                More Info
-            </div>
+            <span> </span>
             <a class='cat-details-primary' target="_blank" href="https://ec.europa.eu/cefdigital/wiki/display/CEFDIGITAL/Domibus">
                 <span class='material-symbols-outlined'>description</span>
                 Docs
@@ -1104,7 +1065,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='36'>
+            <div class='cat-info' data-modal='35'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1140,7 +1101,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='37'>
+            <div class='cat-info' data-modal='36'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1270,7 +1231,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='41'>
+            <div class='cat-info' data-modal='40'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1306,7 +1267,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='42'>
+            <div class='cat-info' data-modal='41'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1342,7 +1303,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='43'>
+            <div class='cat-info' data-modal='42'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1378,7 +1339,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='44'>
+            <div class='cat-info' data-modal='43'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1480,7 +1441,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='47'>
+            <div class='cat-info' data-modal='46'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1516,7 +1477,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='48'>
+            <div class='cat-info' data-modal='47'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1547,7 +1508,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='49'>
+            <div class='cat-info' data-modal='48'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1583,7 +1544,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='50'>
+            <div class='cat-info' data-modal='49'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1614,7 +1575,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='51'>
+            <div class='cat-info' data-modal='50'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1645,7 +1606,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='52'>
+            <div class='cat-info' data-modal='51'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1676,7 +1637,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='53'>
+            <div class='cat-info' data-modal='52'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1707,7 +1668,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='54'>
+            <div class='cat-info' data-modal='53'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1738,7 +1699,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='55'>
+            <div class='cat-info' data-modal='54'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1769,7 +1730,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='56'>
+            <div class='cat-info' data-modal='55'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1805,7 +1766,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='57'>
+            <div class='cat-info' data-modal='56'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1836,7 +1797,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='58'>
+            <div class='cat-info' data-modal='57'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1867,7 +1828,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='59'>
+            <div class='cat-info' data-modal='58'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1898,7 +1859,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='60'>
+            <div class='cat-info' data-modal='59'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1929,7 +1890,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='61'>
+            <div class='cat-info' data-modal='60'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1960,7 +1921,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='62'>
+            <div class='cat-info' data-modal='61'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -1991,7 +1952,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='63'>
+            <div class='cat-info' data-modal='62'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -2022,7 +1983,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='64'>
+            <div class='cat-info' data-modal='63'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -2053,7 +2014,7 @@
             </div>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='65'>
+            <div class='cat-info' data-modal='64'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -2079,7 +2040,7 @@
         <div class='card-attributes'>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='66'>
+            <div class='cat-info' data-modal='65'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
@@ -2105,7 +2066,7 @@
         <div class='card-attributes'>
         </div>
         <div class='foot'>
-            <div class='cat-info' data-modal='67'>
+            <div class='cat-info' data-modal='66'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
