--- a/directories/people/bod/filters.html
+++ b/directories/people/bod/filters.html
@@ -49,14 +49,13 @@
             <label for='filterCompany' class='dropdown-label'>Organisation</label>
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
-                        <option value='addix'>ADDIX</option>
-                        <option value='ficodes'>Ficodes</option>
+                        <option value='artech-international'>Artech International</option>
                         <option value='libelium'>Libelium</option>
                         <option value='madinah-region-development-authority'>Madinah Region Development Authority</option>
                         <option value='meditech'>MedITech</option>
                         <option value='nec'>NEC</option>
-                        <option value='secmotic'>Secmotic</option>
                         <option value='telefonica'>Telefonica</option>
+                        <option value='ubiwhere'>Ubiwhere</option>
             </select>
         </div>
 
@@ -65,13 +64,10 @@
             <select name='' id='filterRole' class='dropdown-last'>
                 <option value='*'>All Roles</option>
                         <option value='ceo'>CEO</option>
-                        <option value='co-founder'>Co-Founder</option>
                         <option value='cso'>CSO</option>
-                        <option value='cto'>CTO</option>
                         <option value='director'>Director</option>
                         <option value='fellow'>Fellow</option>
                         <option value='general-manager'>General Manager</option>
-                        <option value='managing-director'>Managing Director</option>
             </select>
         </div>
 
@@ -89,9 +85,10 @@
             <label for='filterCountry' class='dropdown-label'>Countries</label>
             <select name='' id='filterCountry' class='dropdown-last'>
                 <option value='*'>All Locations</option>
-                    <option value='germany'>Germany</option>
+                    <option value='belgium'>Belgium</option>
                     <option value='italy'>Italy</option>
                     <option value='japan'>Japan</option>
+                    <option value='portugal'>Portugal</option>
                     <option value='saudi-arabia'>Saudi Arabia</option>
                     <option value='spain'>Spain</option>
             </select>
