New Event Added

--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -78,6 +78,8 @@
                 <option value='digital-product-passport'>Digital Product Passport</option>
                 <option value='engineering'>Engineering</option>
                 <option value='global-summit'>Global Summit</option>
+                <option value='industry-4-0'>Industry 4.0</option>
+                <option value='manufacturing'>Manufacturing</option>
                 <option value='member-event'>Member Event</option>
                 <option value='open-source'>Open Source</option>
                 <option value='smart-cities'>Smart Cities</option>
