--- a/directories/events-directory/event-details/featured.html
+++ b/directories/events-directory/event-details/featured.html
@@ -88,7 +88,7 @@
         </div>
     	</a>
     </div>
-    <div class='item' data-id='202510-german-indian-innovation-summit-2025' data-category="technology industry-4-0 manufacturing data-sharing smart-mobility">
+    <div class='item' data-id='202510-german-indian-innovation-summit-2025' data-category="technology innovation">
     	 <a class="story-details" href="./?id=202510-german-indian-innovation-summit-2025" rel="noopener">
         <div class='card card-story card-primary card-hover card-body light'>
             <div>
