Add Filip, Entirety

--- a/directories/enablers/filters.html
+++ b/directories/enablers/filters.html
@@ -81,7 +81,6 @@
                     <option value='cratedb'>CrateDB</option>
                     <option value='dds'>DDS</option>
                     <option value='dkan'>DKAN</option>
-                    <option value='edelivery'>eDelivery</option>
                     <option value='email'>eMail</option>
                     <option value='epcis'>EPCIS</option>
                     <option value='google-map'>Google Map</option>
@@ -102,8 +101,10 @@
                     <option value='openlayers'>OpenLayers</option>
                     <option value='postgresql'>PostgreSQL</option>
                     <option value='pyspark'>PySpark</option>
+                    <option value='python'>Python</option>
                     <option value='qgis'>QGIS</option>
                     <option value='ros2'>ROS2</option>
+                    <option value='sdk'>SDK</option>
                     <option value='sms'>SMS</option>
                     <option value='socrata'>SOCRATA</option>
                     <option value='timescale'>Timescale</option>
