--- a/directories/ihubs/filters.html
+++ b/directories/ihubs/filters.html
@@ -27,33 +27,32 @@
         <select name='' id='filterDomain'>
             <option value='*'>All Domains</option>
                     <option value='agrifood'>AgriFood</option>
-                    <option value='agrifood'>Agrifood</option>
                     <option value='ai'>AI</option>
                     <option value='cities'>Cities</option>
                     <option value='community'>Community</option>
                     <option value='computer-vision---mixed-reality'>Computer vision &amp; Mixed Reality</option>
                     <option value='culture'>Culture</option>
+                    <option value='destinations'>Destinations</option>
                     <option value='egovernance'>eGovernance</option>
                     <option value='ehealth'>eHealth</option>
                     <option value='energy'>Energy</option>
                     <option value='environment'>Environment</option>
                     <option value='heritage'>Heritage</option>
                     <option value='industry'>Industry</option>
-                    <option value='industry-4-0'>Industry 4.0</option>
+                    <option value='livestock'>Livestock</option>
                     <option value='logistics'>Logistics</option>
                     <option value='manufacturing'>Manufacturing</option>
                     <option value='mobility'>Mobility</option>
                     <option value='multidomain'>Multidomain</option>
                     <option value='ports'>Ports</option>
-                    <option value='precision-agriculture-and-livestock'>Precision Agriculture and Livestock</option>
-                    <option value='renewable-energies-and-resources'>Renewable Energies and Resources</option>
+                    <option value='resources'>Resources</option>
                     <option value='robotics'>Robotics</option>
-                    <option value='safety-and-security'>Safety and Security</option>
+                    <option value='safet'>Safet</option>
                     <option value='sea'>Sea</option>
-                    <option value='smart-cities'>Smart Cities</option>
-                    <option value='smart-destinations'>Smart Destinations</option>
+                    <option value='security'>Security</option>
                     <option value='space'>Space</option>
                     <option value='sustainability'>Sustainability</option>
+                    <option value='territories'>Territories</option>
                     <option value='territory'>Territory</option>
                     <option value='tourism'>Tourism</option>
                     <option value='transportation'>Transportation</option>
