--- a/directories/people/tsc/filters.html
+++ b/directories/people/tsc/filters.html
@@ -49,19 +49,18 @@
             <label for='filterCompany' class='dropdown-label'>Organisation</label>
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
-                        <option value='atos'>Atos</option>
                         <option value='aws'>AWS</option>
-                        <option value='city-of-herne'>City of Herne</option>
+                        <option value='bee2solutions'>Bee2Solutions</option>
                         <option value='easy-global-market'>Easy Global Market</option>
                         <option value='engineering'>Engineering</option>
-                        <option value='eprosima'>eProsima</option>
                         <option value='eridanis'>Eridanis</option>
+                        <option value='faubourg-numérique'>Faubourg Numérique</option>
                         <option value='ficodes'>FICODES</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
-                        <option value='martel-innovation'>Martel Innovation</option>
+                        <option value='fiware-ihubs-mission-support-committee'>FIWARE iHubs Mission Support Committee</option>
+                        <option value='khatib---alami'>Khatib &amp; Alami</option>
                         <option value='nec-lab-europe'>NEC Lab Europe</option>
                         <option value='orange'>Orange</option>
-                        <option value='red-hat'>Red Hat</option>
                         <option value='secmotic'>Secmotic</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='universidad-politécnica-de-madrid'>Universidad Politécnica de Madrid</option>
@@ -72,26 +71,26 @@
             <label for='filterRole' class='dropdown-label'>Role</label>
             <select name='' id='filterRole' class='dropdown-last'>
                 <option value='*'>All Roles</option>
-                        <option value='advisor'>Advisor</option>
+                        <option value='architect'>Architect</option>
                         <option value='assistant-professor'>Assistant Professor</option>
-                        <option value='business-developer'>Business Developer</option>
-                        <option value='ceo'>CEO</option>
                         <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='cloud-expert'>Cloud Expert</option>
                         <option value='co-founder'>Co-Founder</option>
                         <option value='coo'>COO</option>
                         <option value='cto'>CTO</option>
-                        <option value='director'>Director</option>
                         <option value='evangelist'>Evangelist</option>
                         <option value='iot-specialist'>IoT Specialist</option>
                         <option value='manager'>Manager</option>
                         <option value='platform-expert'>Platform Expert</option>
+                        <option value='president'>President</option>
                         <option value='professor'>Professor</option>
                         <option value='researcher'>Researcher</option>
                         <option value='smart-cities-specialist'>Smart Cities Specialist</option>
                         <option value='software-engineer'>Software Engineer</option>
+                        <option value='software-specialist'>Software Specialist</option>
                         <option value='solution-architect'>Solution Architect</option>
                         <option value='technical-expert'>Technical Expert</option>
+                        <option value='vice-chair'>Vice Chair</option>
             </select>
         </div>
 
@@ -102,7 +101,6 @@
                 <option value='*'>All Member Types</option>
                         <option value='associates'>Associates</option>
                         <option value='gold'>Gold</option>
-                        <option value='gold-seu'>Gold SEU</option>
                         <option value='platinum'>Platinum</option>
             </select>
         </div>
