--- a/directories/people/tsc/filters.html
+++ b/directories/people/tsc/filters.html
@@ -58,10 +58,10 @@
                         <option value='ficodes'>FICODES</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
                         <option value='fiware-ihubs-mission-support-committee'>FIWARE iHubs Mission Support Committee</option>
-                        <option value='khatib---alami'>Khatib &amp; Alami</option>
                         <option value='nec-lab-europe'>NEC Lab Europe</option>
                         <option value='orange'>Orange</option>
                         <option value='secmotic'>Secmotic</option>
+                        <option value='smart-city-council-mena'>Smart City Council MENA</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='universidad-politécnica-de-madrid'>Universidad Politécnica de Madrid</option>
             </select>
@@ -73,6 +73,7 @@
                 <option value='*'>All Roles</option>
                         <option value='architect'>Architect</option>
                         <option value='assistant-professor'>Assistant Professor</option>
+                        <option value='chair'>Chair</option>
                         <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='cloud-expert'>Cloud Expert</option>
                         <option value='co-founder'>Co-Founder</option>
