--- a/directories/people/tsc/people.html
+++ b/directories/people/tsc/people.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-1" class="grid-item khatib---alami   manager ">
+        <div id="item-1" class="grid-item smart-city-council-mena   chair ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -37,9 +37,9 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name'>Houssam Almasri</h6>
-                    <h4 class='position'>Senior Project Manager</h4>
-                    <a target='_blank' href='https://www.khatibalami.com/' rel='noopener'>
-                        <h5 class='company-link'>Khatib &amp; Alami</h5>
+                    <h4 class='position'>Chair</h4>
+                    <a target='_blank' href='' rel='noopener'>
+                        <h5 class='company-link'>Smart City Council MENA</h5>
                     </a>
                 </div>
                 <div class='icons'>
