--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -79,6 +79,7 @@
                 <option value='engineering'>Engineering</option>
                 <option value='global-summit'>Global Summit</option>
                 <option value='innovation'>Innovation</option>
+                <option value='interoperability'>Interoperability</option>
                 <option value='member-event'>Member Event</option>
                 <option value='open-source'>Open Source</option>
                 <option value='smart-cities'>Smart Cities</option>
